--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 
 <div id="whatsapp-popup">
   <a href="https://wa.me/8639385287">
-    <img src="https://pbs.twimg.com/profile_images/1318652224638124032/wrpp2Nl4_400x400.png" alt="Chat on WhatsApp">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Fwhatsapp-logo-png&psig=AOvVaw2F3qUQCjppt6PVaqK4doQh&ust=1706770092936000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCLDt_qCEh4QDFQAAAAAdAAAAABAI" alt="Chat on WhatsApp">
   </a>
 </div>
 
