--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 
 <div id="whatsapp-popup">
   <a href="https://wa.me/8639385287">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dreamstime.com%2Fwhatsapp-logo-icon-vector-gradient-design-illustration-white-background-whatsapp-logo-icon-vector-gradient-design-image146098362&psig=AOvVaw2F3qUQCjppt6PVaqK4doQh&ust=1706770092936000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCLDt_qCEh4QDFQAAAAAdAAAAABAQ" alt="Chat on WhatsApp">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fwhatsapp_2582600&psig=AOvVaw2F3qUQCjppt6PVaqK4doQh&ust=1706770092936000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCLDt_qCEh4QDFQAAAAAdAAAAABAg" alt="Chat on WhatsApp">
   </a>
 </div>
 
